# Mini-Billiard

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake_modules/: STB.cmake
materials/PoolBalls/: Ball1.mtl  Ball10.mtl  Ball11.mtl  Ball12.mtl  Ball13.mtl  Ball14.mtl  Ball15.mtl  Ball2.mtl  Ball3.mtl  Ball4.mtl  Ball5.mtl  Ball6.mtl  Ball7.mtl  Ball8.mtl  Ball9.mtl
materials/shaders/: ball.frag  ball.vert  table.frag  table.vert
src/: Constants.h  constants.h  main.cpp
src/app/: Application.cpp  Application.h  application.cpp  application.h
src/callbacks/: DebugCallback.hpp  ErrorCallback.hpp  FrameBufferSizeCallback.hpp  KeyboardCallback.h  MouseButtonCallback.hpp  MouseCallback.hpp  MouseMoveCallback.hpp  MouseScrollCallback.hpp  ScrollCallback.hpp  WindowSizeCallback.hpp
src/classes/: File.h  FileType.h  LightType.h  Material.h  MeshCollider.h  MeshType.h  Object.h  ObjectRenderable.cpp  ObjectRenderable.h  ObjectRenderable.hpp  ObjectType.h  Shader.h
src/controllers/: CameraController.cpp  CameraController.h
src/macros/: GLMacro.hpp
src/models/: TableModel.hpp
src/shaders/: texture.frag  texture.vert
src/utils/: FileUtil.hpp  HashUtil.hpp  MaterialUtil.cpp  MaterialUtil.h  MaterialUtil.hpp  MathUtil.hpp  ObjUtil.cpp  ObjUtil.h  ObjUtil.hpp  ObjectUtil.hpp  RandomUtil.hpp  ShaderUtil.hpp  StringUtil.hpp  TextureUtil.hpp
